tests/paczka1/small_fuzzy/89318778.err
Error in line 7: z8TMnNi A871 4,9
Error in line 6: tGtJD S46 44,6
